# mechano

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROBOT_INSTALLATION.md  install_mechano.bash  install_mechano_desktop.bash  update_firmware.bash
docker/: .dockerignore  .env  Dockerfile  Dockerfile.jetson  docker-compose.yml  ros_entrypoint.sh
docs/: hardware_assembly.md  hardware_bom.md  navigation_tuning.md  ros2_control_overview.md  software_architecture.md  troubleshooting.md
docs/images/: .gitkeep
scripts/: calibrate_camera.bash  calibrate_imu.bash  check_hardware.bash  create_systemd_service.bash  save_map.bash  setup_udev_rules.bash
src/mechano/: CMakeLists.txt  README.md  package.xml
src/mechano_bringup/: CMakeLists.txt  README.md  package.xml
src/mechano_bringup/config/: ekf.yaml  joy_teleop.yaml  mechano_controllers.yaml  robot_params.yaml  twist_mux.yaml
src/mechano_bringup/launch/: bringup.launch.py  controllers.launch.py  joy_teleop.launch.py  sensors.launch.py  teleop.launch.py
src/mechano_description/: CMakeLists.txt  README.md  package.xml
src/mechano_description/config/: joint_limits.yaml
src/mechano_description/launch/: description.launch.py
src/mechano_description/meshes/: .gitkeep
src/mechano_description/rviz/: model.rviz  urdf_config.rviz
src/mechano_description/urdf/: base.xacro  common_properties.xacro  gazebo.xacro  materials.xacro  mechano.urdf.xacro  ros2_control.xacro  sensors.xacro  wheels.xacro
src/mechano_gazebo/: CMakeLists.txt  README.md  package.xml
src/mechano_gazebo/config/: gazebo_params.yaml
src/mechano_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py
src/mechano_gazebo/models/: .gitkeep
src/mechano_gazebo/worlds/: empty.world  house.world  warehouse.world
src/mechano_hardware/: CMakeLists.txt  README.md  mechano_hardware.xml  package.xml
src/mechano_hardware/include/mechano_hardware/: arduino_comms.hpp  mechano_system.hpp  wheel.hpp
src/mechano_hardware/src/: arduino_comms.cpp  mechano_system.cpp  wheel.cpp
src/mechano_msgs/: CMakeLists.txt  README.md  package.xml
src/mechano_msgs/msg/: DistanceSensor.msg  RobotState.msg  WheelStates.msg
src/mechano_msgs/srv/: EStop.srv  SetMode.srv
src/mechano_navigation/: CMakeLists.txt  README.md  package.xml
src/mechano_navigation/behavior_trees/: navigate_through_poses.xml  navigate_to_pose.xml
src/mechano_navigation/config/: nav2_params.yaml  slam_params.yaml
src/mechano_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/mechano_navigation/maps/: .gitkeep
src/mechano_node/: CMakeLists.txt  README.md  package.xml
src/mechano_node/config/: mechano_node.yaml
src/mechano_node/include/mechano_node/: battery_monitor.hpp  hmi.hpp  mechano_node.hpp  safety_monitor.hpp
src/mechano_node/launch/: mechano_node.launch.py
src/mechano_node/src/: battery_monitor.cpp  hmi.cpp  mechano_node.cpp  safety_monitor.cpp
src/mechano_perception/: CMakeLists.txt  README.md  package.xml
src/mechano_perception/config/: depth_to_scan.yaml  distance_sensor.yaml  stereo_camera.yaml
src/mechano_perception/include/mechano_perception/: distance_sensor_node.hpp
src/mechano_perception/launch/: depth_to_scan.launch.py  distance_sensor.launch.py  perception.launch.py  stereo_camera.launch.py
src/mechano_perception/src/: distance_sensor_node.cpp
src/mechano_vision/: package.xml  setup.cfg  setup.py
src/mechano_vision/launch/: vision.launch.py
src/mechano_vision/mechano_vision/: camera_processor.py
src/mechano_viz/: CMakeLists.txt  README.md  package.xml
src/mechano_viz/launch/: view_diagnostics.launch.py  view_model.launch.py  view_navigation.launch.py  view_robot.launch.py  view_slam.launch.py
src/mechano_viz/rviz/: full.rviz  model.rviz  navigation.rviz  sensors.rviz  slam.rviz
