<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechano_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for bringing up the Mechano robot</description>

  <maintainer email="user@example.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mechano_description</exec_depend>
  <exec_depend>mechano_hardware</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
